[project]
name = "blank-app-template"
version = "0.1.0"
description = "A simple Streamlit app template."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.58.0",
    "gspread>=6.0.0",
    "google-auth-oauthlib>=1.0.0",
    "pandas>=2.0.0",
]

[tool.uv]
package = false
