[project]
name = "blank-app-template"
version = "0.1.0"
description = "A simple Streamlit app template."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.59.2",
    "gspread>=6.2.1",
    "google-auth-oauthlib>=1.4.0",
    "pandas>=3.0.3",
]

[tool.uv]
package = false
